--- a/TietoVisa/Base.lproj/Main.storyboard
+++ b/TietoVisa/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UVd-F5-7Bs">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TietoVisa" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,117 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hW8-t3-x7r">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostCell" id="NNB-SI-efw">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NNB-SI-efw" id="oZk-lc-2Jp">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="hW8-t3-x7r" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="BRF-wE-j8k"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hW8-t3-x7r" secondAttribute="bottom" id="Esx-zQ-ZEw"/>
+                            <constraint firstAttribute="trailing" secondItem="hW8-t3-x7r" secondAttribute="trailing" id="Pzo-Zb-5ml"/>
+                            <constraint firstItem="hW8-t3-x7r" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QjD-xN-9Ol"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="r4L-F5-eZO">
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="UX2-x8-M8P">
+                            <connections>
+                                <segue destination="tm8-pJ-PDo" kind="presentation" id="MrE-95-9Zm"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="hW8-t3-x7r" id="MbI-T9-KCA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="138.98050974512745"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="3iM-ag-IGr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UVd-F5-7Bs" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VCb-k3-fds">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="wjQ-go-8wR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2rN-I9-Ox2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="792.95352323838085"/>
+        </scene>
+        <!--Compose View Controller-->
+        <scene sceneID="Dk9-Q2-aWK">
+            <objects>
+                <viewController id="tm8-pJ-PDo" customClass="ComposeViewController" customModule="TietoVisa" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3Xe-xv-hI7"/>
+                        <viewControllerLayoutGuide type="bottom" id="iqh-w5-ov0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="SHv-us-3XO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ToU-7B-xDv">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Compose" id="Bg7-J1-Xus">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="trash" id="jNL-GA-6Ve">
+                                            <connections>
+                                                <action selector="cancelPost:" destination="tm8-pJ-PDo" id="xqF-rm-uSs"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="4qV-dE-L4m">
+                                            <connections>
+                                                <action selector="addPost:" destination="tm8-pJ-PDo" id="ft9-8l-cgv"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MRk-gB-43u">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ToU-7B-xDv" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leading" id="5pk-PB-jAG"/>
+                            <constraint firstItem="MRk-gB-43u" firstAttribute="top" secondItem="ToU-7B-xDv" secondAttribute="bottom" id="8sD-1r-QLS"/>
+                            <constraint firstAttribute="trailing" secondItem="ToU-7B-xDv" secondAttribute="trailing" id="AMO-oq-mRK"/>
+                            <constraint firstItem="MRk-gB-43u" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leading" id="Lse-YX-7bA"/>
+                            <constraint firstAttribute="trailing" secondItem="MRk-gB-43u" secondAttribute="trailing" id="UdY-tk-9av"/>
+                            <constraint firstItem="iqh-w5-ov0" firstAttribute="top" secondItem="MRk-gB-43u" secondAttribute="bottom" id="ovY-H6-a9b"/>
+                            <constraint firstItem="ToU-7B-xDv" firstAttribute="top" secondItem="3Xe-xv-hI7" secondAttribute="bottom" id="tIK-LZ-WJ6"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="textView" destination="MRk-gB-43u" id="Jjq-ne-dXw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Yg-wE-Jvk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1078" y="950"/>
         </scene>
     </scenes>
 </document>
