--- a/TietoVisa/Base.lproj/Main.storyboard
+++ b/TietoVisa/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="UVd-F5-7Bs">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,18 +19,18 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hW8-t3-x7r">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostCell" id="NNB-SI-efw">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NNB-SI-efw" id="oZk-lc-2Jp">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -57,7 +58,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1076" y="138.98050974512745"/>
+            <point key="canvasLocation" x="942" y="793"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="3iM-ag-IGr">
@@ -86,13 +87,13 @@
                         <viewControllerLayoutGuide type="bottom" id="iqh-w5-ov0"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="SHv-us-3XO">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ToU-7B-xDv">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <items>
-                                    <navigationItem title="Compose" id="Bg7-J1-Xus">
+                                    <navigationItem title="Lisää kysymys" id="Bg7-J1-Xus">
                                         <barButtonItem key="leftBarButtonItem" systemItem="trash" id="jNL-GA-6Ve">
                                             <connections>
                                                 <action selector="cancelPost:" destination="tm8-pJ-PDo" id="xqF-rm-uSs"/>
@@ -106,31 +107,111 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MRk-gB-43u">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fGX-b4-I4T">
+                                <rect key="frame" x="16" y="186" width="288" height="30"/>
+                                <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gx7-ee-e72">
+                                <rect key="frame" x="16" y="247" width="288" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d7H-bO-qyk">
+                                <rect key="frame" x="16" y="308" width="288" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WXI-29-ZiX">
+                                <rect key="frame" x="16" y="369" width="288" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kysymys:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W08-iw-fWS">
+                                <rect key="frame" x="16" y="69" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oikea vastaus:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yaj-xH-2fs">
+                                <rect key="frame" x="16" y="160" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Väärä vastaus 1:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="krT-if-sKC">
+                                <rect key="frame" x="16" y="221" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Väärä vastaus 2:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JM6-Ht-d5Z">
+                                <rect key="frame" x="16" y="282" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Väärä vastaus 3:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WLi-Uy-MtM">
+                                <rect key="frame" x="16" y="343" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="85J-jZ-oTR">
+                                <rect key="frame" x="16" y="95" width="288" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="TCT-MQ-UGK"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="WLi-Uy-MtM" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="01a-pt-Hr5"/>
+                            <constraint firstItem="WLi-Uy-MtM" firstAttribute="top" secondItem="d7H-bO-qyk" secondAttribute="bottom" constant="5" id="0tR-2F-2UC"/>
+                            <constraint firstItem="krT-if-sKC" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="19a-FQ-j1a"/>
                             <constraint firstItem="ToU-7B-xDv" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leading" id="5pk-PB-jAG"/>
-                            <constraint firstItem="MRk-gB-43u" firstAttribute="top" secondItem="ToU-7B-xDv" secondAttribute="bottom" id="8sD-1r-QLS"/>
                             <constraint firstAttribute="trailing" secondItem="ToU-7B-xDv" secondAttribute="trailing" id="AMO-oq-mRK"/>
-                            <constraint firstItem="MRk-gB-43u" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leading" id="Lse-YX-7bA"/>
-                            <constraint firstAttribute="trailing" secondItem="MRk-gB-43u" secondAttribute="trailing" id="UdY-tk-9av"/>
-                            <constraint firstItem="iqh-w5-ov0" firstAttribute="top" secondItem="MRk-gB-43u" secondAttribute="bottom" id="ovY-H6-a9b"/>
+                            <constraint firstItem="Gx7-ee-e72" firstAttribute="top" secondItem="krT-if-sKC" secondAttribute="bottom" constant="5" id="ARx-ds-lGd"/>
+                            <constraint firstItem="JM6-Ht-d5Z" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="Avc-6Z-E05"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Gx7-ee-e72" secondAttribute="trailing" id="DEw-0i-UQx"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yaj-xH-2fs" secondAttribute="trailing" id="EIi-9A-Xd6"/>
+                            <constraint firstItem="WXI-29-ZiX" firstAttribute="top" secondItem="WLi-Uy-MtM" secondAttribute="bottom" constant="5" id="GN5-Mi-Lff"/>
+                            <constraint firstItem="d7H-bO-qyk" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="HLZ-oT-YYK"/>
+                            <constraint firstItem="85J-jZ-oTR" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="Lgk-bb-tEV"/>
+                            <constraint firstItem="WXI-29-ZiX" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="LiX-Zb-eg7"/>
+                            <constraint firstItem="yaj-xH-2fs" firstAttribute="top" secondItem="85J-jZ-oTR" secondAttribute="bottom" constant="5" id="MwD-3L-zwM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="85J-jZ-oTR" secondAttribute="trailing" id="Pow-25-q4X"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WXI-29-ZiX" secondAttribute="trailing" id="QXX-4D-HWY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="W08-iw-fWS" secondAttribute="trailing" id="WZD-Bh-9cl"/>
+                            <constraint firstItem="d7H-bO-qyk" firstAttribute="top" secondItem="JM6-Ht-d5Z" secondAttribute="bottom" constant="5" id="Wvj-ET-haj"/>
+                            <constraint firstItem="yaj-xH-2fs" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="YQN-ej-ll8"/>
+                            <constraint firstItem="Gx7-ee-e72" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="Zv2-sd-fxt"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WLi-Uy-MtM" secondAttribute="trailing" id="ajQ-yG-Bk4"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="JM6-Ht-d5Z" secondAttribute="trailing" id="ekf-HS-C0b"/>
+                            <constraint firstItem="fGX-b4-I4T" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="hrb-Bd-JoP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="d7H-bO-qyk" secondAttribute="trailing" id="jfe-UP-tCR"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fGX-b4-I4T" secondAttribute="trailing" id="oSF-tL-L01"/>
+                            <constraint firstItem="W08-iw-fWS" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="qTD-8S-fox"/>
+                            <constraint firstItem="fGX-b4-I4T" firstAttribute="top" secondItem="yaj-xH-2fs" secondAttribute="bottom" constant="5" id="r6B-gb-TgH"/>
+                            <constraint firstItem="krT-if-sKC" firstAttribute="top" secondItem="fGX-b4-I4T" secondAttribute="bottom" constant="5" id="riq-al-xAA"/>
                             <constraint firstItem="ToU-7B-xDv" firstAttribute="top" secondItem="3Xe-xv-hI7" secondAttribute="bottom" id="tIK-LZ-WJ6"/>
+                            <constraint firstItem="JM6-Ht-d5Z" firstAttribute="top" secondItem="Gx7-ee-e72" secondAttribute="bottom" constant="5" id="u9Q-sW-CbJ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="krT-if-sKC" secondAttribute="trailing" id="xGU-pd-3cR"/>
+                            <constraint firstItem="85J-jZ-oTR" firstAttribute="top" secondItem="W08-iw-fWS" secondAttribute="bottom" constant="5" id="yX1-Ew-Fta"/>
+                            <constraint firstItem="W08-iw-fWS" firstAttribute="top" secondItem="ToU-7B-xDv" secondAttribute="bottom" constant="5" id="zac-qd-doo"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="textView" destination="MRk-gB-43u" id="Jjq-ne-dXw"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Yg-wE-Jvk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1078" y="950"/>
+            <point key="canvasLocation" x="1775.625" y="792.5"/>
         </scene>
     </scenes>
 </document>
