--- a/TietoVisa/Base.lproj/Main.storyboard
+++ b/TietoVisa/Base.lproj/Main.storyboard
@@ -240,5 +240,80 @@
             </objects>
             <point key="canvasLocation" x="1775.625" y="792.5"/>
         </scene>
+        <!--Game Screen View Controller-->
+        <scene sceneID="3gu-iS-KsH">
+            <objects>
+                <viewController id="4AP-XL-IXm" customClass="GameScreenViewController" customModule="TietoVisa" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dN5-sf-nil"/>
+                        <viewControllerLayoutGuide type="bottom" id="1MJ-U4-Bdq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ewy-4S-cTK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tähän tulee kysymys: Esimerkiksi, kuka kiipesi ensimmäisenä Mount Everestille?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F6b-BJ-hrC">
+                                <rect key="frame" x="16" y="20" width="288" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="fjo-XJ-flI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="107-E5-gti">
+                                <rect key="frame" x="17" y="225" width="288" height="2"/>
+                            </progressView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Puv-03-hS0">
+                                <rect key="frame" x="0.0" y="232" width="320" height="248"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="enP-RF-jS7">
+                                        <rect key="frame" x="0.0" y="0.0" width="160" height="248"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qvR-ma-nZT">
+                                                <rect key="frame" x="0.0" y="0.0" width="160" height="124"/>
+                                                <state key="normal" title="Vastaus 1"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MTp-PR-Pwv">
+                                                <rect key="frame" x="0.0" y="124" width="160" height="124"/>
+                                                <state key="normal" title="Vastaus 3"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ACu-OT-QVK">
+                                        <rect key="frame" x="160" y="0.0" width="160" height="248"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FML-Sp-5wc">
+                                                <rect key="frame" x="0.0" y="0.0" width="160" height="124"/>
+                                                <state key="normal" title="Vastaus 2"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9rq-CZ-BaM">
+                                                <rect key="frame" x="0.0" y="124" width="160" height="124"/>
+                                                <state key="normal" title="Vastaus 4"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Puv-03-hS0" secondAttribute="trailing" id="3eo-f2-qFc"/>
+                            <constraint firstItem="Puv-03-hS0" firstAttribute="leading" secondItem="Ewy-4S-cTK" secondAttribute="leading" id="Dvb-yr-YdM"/>
+                            <constraint firstItem="107-E5-gti" firstAttribute="leading" secondItem="Ewy-4S-cTK" secondAttribute="leadingMargin" id="HTe-DL-FCc"/>
+                            <constraint firstItem="F6b-BJ-hrC" firstAttribute="top" secondItem="dN5-sf-nil" secondAttribute="bottom" id="OfB-54-maU"/>
+                            <constraint firstItem="Puv-03-hS0" firstAttribute="top" secondItem="107-E5-gti" secondAttribute="bottom" constant="5" id="ZoW-qj-Jmt"/>
+                            <constraint firstItem="F6b-BJ-hrC" firstAttribute="leading" secondItem="Ewy-4S-cTK" secondAttribute="leadingMargin" id="cpS-uM-Nej"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="107-E5-gti" secondAttribute="trailing" id="fE2-jp-kJR"/>
+                            <constraint firstItem="107-E5-gti" firstAttribute="top" secondItem="F6b-BJ-hrC" secondAttribute="bottom" constant="5" id="ht6-Y0-hBx"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="F6b-BJ-hrC" secondAttribute="trailing" id="qQw-4D-TT6"/>
+                            <constraint firstAttribute="bottom" secondItem="Puv-03-hS0" secondAttribute="bottom" id="vly-XM-7SQ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Wv-u5-cqj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1776" y="1475"/>
+        </scene>
     </scenes>
 </document>
